Finished base functionality
Signed-off-by: Noah <nmritter02@gmail.com>

--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,1 +1,4 @@
-<p>graph works!</p>
+<div class="chart-wrapper">
+    <canvas baseChart [data]="data" [type]="'line'" [options]="chartOptions">
+    </canvas>
+</div>
