--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,1 +1,14 @@
-<p>search works!</p>
+<div id="search-component">
+
+    <label for="search-box">Stock</label>
+    <input id="myInput" [(ngModel)]="searchValue" (input)="search()" placeholder="Search.." />
+
+    <ul class="search-result">
+        <li *ngFor="let symbol of searchOutput">
+            <a id="button" (click)="getValue(symbol)">
+          {{symbol}}
+        </a>
+        </li>
+    </ul>
+
+</div>
